generate info about min single int and max packed int
and the test code (I wanna keep it in the vcs history okay? :p lol)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -175,7 +175,9 @@ hex = [
 id-unstable = [
 	"dep:rand"
 ]
-int-unstable = []
+int-unstable = [
+	"wiwiwiwiwi/int"
+]
 iter-unstable = []
 lazy-wrap = [
 	"dep:parking_lot"
