update workflow files
make the feature-check workflow also run tests, and test workflow include addon features in testing too

--- a/.github/workflows/feature-check.yml
+++ b/.github/workflows/feature-check.yml
@@ -19,3 +19,6 @@ jobs:
 
     - name: check features individually
       run: cargo hack check --verbose --each-feature
+
+    - name: test features individually
+      run: cargo hack test --verbose --each-feature
