--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,10 +28,10 @@ jobs:
       run: rustc --version
 
     - name: build
-      run: cargo build --verbose --features all-unstable
+      run: cargo build --verbose --features all-unstable,all-addons
 
     - name: test
-      run: cargo test --verbose --features all-unstable
+      run: cargo test --verbose --features all-unstable,all-addons
       env:
         CARGO_INCREMENTAL: "0"
         LLVM_PROFILE_FILE: "target/coverage/test-%m-%p.profraw"
