gate tuples with >8 items behind feature
is 256 a bit much? just a liiiiiiiitle lol

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -234,6 +234,8 @@ z85 = [
 # addon features
 hashbrown = ["dep:hashbrown"]
 image = ["dep:image"]
+large-tuples = []
+omega-tuples-of-doom = ["large-tuples"]
 serde-json = ["dep:serde_json"]
 
 [[bench]]
