--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         set -gx RUSTDOCFLAGS "--cfg docsrs --cfg kiwingay -Z unstable-options --enable-index-page --theme "(pwd)"/.cargo/rustdoc-custom-theme/meadow.css"
         set -gx KIWINGAY_DEPLOY_COMMIT_SHORT (string sub --length 8 $KIWINGAY_DEPLOY_COMMIT)
-        cargo doc --verbose --no-deps --features "all-unstable all-addons" --lib -p wiwi -p wiwiwiwiwi
+        cargo doc --verbose --no-deps --features all-unstable,all-addons --lib -p wiwi -p wiwiwiwiwi
       env:
         KIWINGAY_DEPLOY_COMMIT: ${{ github.sha }}
 
