--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,14 +25,14 @@ jobs:
       run: rustc --version
 
     - name: build
-      run: cargo build --verbose --features all
+      run: cargo build --verbose --features all,all-addons
     - name: build in release
-      run: cargo build --release --verbose --features all
+      run: cargo build --release --verbose --features all,all-addons
 
     - name: test
-      run: cargo test --verbose --features all
+      run: cargo test --verbose --features all,all-addons
     - name: test in release
-      run: cargo test --release --verbose --features all
+      run: cargo test --release --verbose --features all,all-addons
 
   feature-check:
     uses: ./.github/workflows/feature-check.yml
