write a feature generation script
I want a unified place to change things, and have a script generate all the stuff and place them in right spots for me, cause current process is quite manual

--- a/scripts/Cargo.toml
+++ b/scripts/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
 name = "wiwi-scripts"
-version = "0.0.0"
-edition = "2021"
+version = { workspace = true }
+edition = { workspace = true }
 publish = false
 
 [dependencies]
 wiwi = { path = ".." }
+
+[[bin]]
+name = "gen-features"
 
 [[bin]]
 name = "generate-hex-table-decoder"
