--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ exclude = [
 	".cargo",
 	".github",
 	"codecov.yml",
-	"rust-toolchain.toml",
+	"rust-toolchain.toml"
 ]
 categories = [
 	# "data-structures" # ?
