--- a/.github/workflows/feature-check.yml
+++ b/.github/workflows/feature-check.yml
@@ -18,7 +18,7 @@ jobs:
       run: cargo install cargo-hack --verbose
 
     - name: check features individually
-      run: cargo hack check --verbose --each-feature --skip omega-tuples-of-doom
+      run: cargo hack check --verbose --each-feature
 
     - name: test features individually
-      run: cargo hack test --verbose --each-feature --skip omega-tuples-of-doom
+      run: cargo hack test --verbose --each-feature
