--- a/.github/workflows/verify-gen-features.yml
+++ b/.github/workflows/verify-gen-features.yml
@@ -15,11 +15,7 @@ jobs:
       run: rustc --version
 
     - name: run gen-features script
-      run: |
-        cd scripts
-        cargo build --bin gen-features
-        cd ..
-        ./target/debug/gen-features
+      run: ./scripts/gen-features
 
     # if there are git changes, files are not up to date, and we error
     - name: verify generated features are up to date
