--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,7 +67,7 @@ zeroize = { version = "1.7.0", optional = true }
 
 [features]
 all = ["clock-timer", "debounce", "h", "hex", "lazy-wrap", "nominal", "to-maybeuninit", "with-cloned", "z85"]
-all-unstable = ["all", "aoc-unstable", "auth-unstable", "bitstream-unstable", "chainer-unstable", "defer-unstable", "id-unstable", "int-unstable", "iter-unstable", "lsl-unstable", "memory-usage-unstable", "minesweeper-unstable", "path-unstable", "serialiser-unstable", "string-pool-unstable", "sudoku-unstable"]
+all-unstable = ["all", "aoc-unstable", "auth-unstable", "bitstream-unstable", "chainer-unstable", "cli-unstable", "defer-unstable", "id-unstable", "int-unstable", "iter-unstable", "lsl-unstable", "memory-usage-unstable", "minesweeper-unstable", "path-unstable", "serialiser-unstable", "string-pool-unstable", "sudoku-unstable"]
 all-addons = ["hashbrown", "image", "large-tuples", "omega-tuples-of-doom", "serde-json"]
 
 aoc-unstable = [
@@ -88,6 +88,7 @@ chainer-unstable = [
 	"iter-unstable",
 	"to-maybeuninit"
 ]
+cli-unstable = []
 clock-timer = [
 	"dep:chrono",
 	"dep:tokio"
