--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,7 +68,7 @@ zeroize = { version = "1.7.0", optional = true }
 [features]
 all = ["augment-panic-hook", "clock-timer", "debounce", "h", "hex", "lazy-wrap", "nominal", "to-maybeuninit", "with-cloned", "z85"]
 all-unstable = ["all", "aoc-unstable", "auth-unstable", "bitstream-unstable", "chainer-unstable", "cli-unstable", "defer-unstable", "id-unstable", "int-unstable", "iter-unstable", "lsl-unstable", "memory-usage-unstable", "minesweeper-unstable", "num-traits-unstable", "path-unstable", "serialiser-binary-unstable", "serialiser-text-unstable", "string-pool-unstable", "sudoku-unstable"]
-all-addons = ["hashbrown", "image", "large-tuples", "omega-tuples-of-doom", "serde-json"]
+all-addons = ["hashbrown", "image", "large-tuples", "nightly", "omega-tuples-of-doom", "serde-json"]
 
 aoc-unstable = [
 	"iter-unstable"
@@ -157,6 +157,7 @@ image = [
 	"dep:image"
 ]
 large-tuples = []
+nightly = []
 omega-tuples-of-doom = [
 	"large-tuples"
 ]
