remove chainer's dependency on iter
I think we should keep our iter module opt-in, so people write iters using our system as they want / use our adapter as they want, and we shouldn't force them to use it? so provide std iterators by default. Most of it were just passing iter adapters, so there wasn't really any benefit ours had over std's iterators

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,10 +85,7 @@ auth-unstable = [
 	"z85"
 ]
 bitstream-unstable = []
-chainer-unstable = [
-	"iter-unstable",
-	"to-maybeuninit"
-]
+chainer-unstable = []
 cli-unstable = []
 clock-timer = [
 	"dep:chrono",
