the issue of using dependencies that aren't your own
I want to do something about this, but I am not sure how to do so cleanly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -120,6 +120,7 @@ memory-usage-unstable = [
 minesweeper-unstable = [
 	"dep:rand",
 	"chainer-unstable",
+	"iter-unstable",
 	"z85"
 ]
 nominal = []
