add addition functions for int

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,7 +104,8 @@ id-unstable = [
 	"dep:rand"
 ]
 int-unstable = [
-	"wiwiwiwiwi/int"
+	"wiwiwiwiwi/int",
+	"num-traits-unstable"
 ]
 iter-unstable = []
 lazy-wrap = [
