widening mul for u128, courtesy of int feature
:o

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -125,7 +125,9 @@ minesweeper-unstable = [
 	"z85"
 ]
 nominal = []
-num-traits-unstable = []
+num-traits-unstable = [
+	"int-unstable"
+]
 path-unstable = []
 serialiser-binary-unstable = [
 	"dep:ordered-float"
