--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,7 @@ uuid = { version = "1.8.0", optional = true }
 zeroize = { version = "1.7.0", optional = true }
 
 [features]
-all = ["augment-panic-hook", "clock-timer", "debounce", "export-all-submodules", "h", "hex", "lazy-wrap", "nominal", "to-maybeuninit", "with-cloned", "z85"]
+all = ["augment-panic-hook", "clock-timer", "debounce", "export-all-submodules", "h", "hex", "lazy-wrap", "nominal", "with-cloned", "z85"]
 all-unstable = ["all", "aoc-unstable", "auth-unstable", "bitstream-unstable", "chainer-unstable", "cli-unstable", "defer-unstable", "id-unstable", "int-unstable", "iter-unstable", "lsl-unstable", "memory-usage-unstable", "minesweeper-unstable", "num-traits-unstable", "path-unstable", "serialiser-binary-unstable", "serialiser-text-unstable", "string-pool-unstable", "sudoku-unstable", "unicode-unstable"]
 all-addons = ["hashbrown", "image", "large-tuples", "nightly", "omega-tuples-of-doom", "serde-json"]
 
@@ -142,7 +142,6 @@ sudoku-unstable = [
 	"chainer-unstable",
 	"iter-unstable"
 ]
-to-maybeuninit = []
 unicode-unstable = []
 with-cloned = []
 z85 = [
