make num-traits use export-all-submodules
yay reducing code duplication (a little)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -133,6 +133,7 @@ minesweeper-unstable = [
 ]
 nominal = []
 num-traits-unstable = [
+	"export-all-submodules",
 	"int-unstable"
 ]
 path-unstable = []
