--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,7 +68,7 @@ zeroize = { version = "1.7.0", optional = true }
 
 [features]
 all = ["augment-panic-hook", "clock-timer", "debounce", "export-all-submodules", "h", "hex", "lazy-wrap", "nominal", "with-cloned", "z85"]
-all-unstable = ["all", "aoc-unstable", "auth-unstable", "bitstream-unstable", "chainer-unstable", "cli-unstable", "defer-unstable", "id-unstable", "int-unstable", "iter-unstable", "lsl-unstable", "memory-usage-unstable", "minesweeper-unstable", "num-traits-unstable", "path-unstable", "ptr-unstable", "serialiser-binary-unstable", "serialiser-text-unstable", "string-pool-unstable", "sudoku-unstable", "unicode-unstable"]
+all-unstable = ["all", "aoc-unstable", "auth-unstable", "bitstream-unstable", "chainer-unstable", "cli-unstable", "defer-unstable", "id-unstable", "int-unstable", "iter-unstable", "lsl-unstable", "mcu-unstable", "memory-usage-unstable", "minesweeper-unstable", "num-traits-unstable", "path-unstable", "ptr-unstable", "serialiser-binary-unstable", "serialiser-text-unstable", "string-pool-unstable", "sudoku-unstable", "unicode-unstable"]
 all-addons = ["hashbrown", "image", "large-tuples", "nightly", "omega-tuples-of-doom", "serde-json"]
 
 aoc-unstable = [
@@ -121,6 +121,9 @@ lazy-wrap = [
 lsl-unstable = [
 	"dep:hashbrown",
 	"id-unstable"
+]
+mcu-unstable = [
+	"num-traits-unstable"
 ]
 memory-usage-unstable = [
 	"wiwiwiwiwi/memory-usage"
