--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ ordered-float = { version = "4.2.0", optional = true }
 p384 = { version = "0.13.0", optional = true }
 parking_lot = { version = "0.12.1", optional = true }
 rand = { version = "0.8.5", optional = true }
+rand_chacha = { version = "0.3.1", optional = true }
 serde_json = { version = "1.0.116", optional = true }
 spin_sleep = { version = "1.2.0", optional = true }
 thiserror = { version = "1.0.58", optional = true }
@@ -67,7 +68,7 @@ uuid = { version = "1.8.0", optional = true }
 zeroize = { version = "1.7.0", optional = true }
 
 [features]
-all = ["augment-panic-hook", "clock-timer", "debounce", "export-all-submodules", "h", "hex", "lazy-wrap", "nominal", "with-cloned", "z85"]
+all = ["augment-panic-hook", "clock-timer", "debounce", "export-all-submodules", "h", "hex", "lazy-wrap", "nominal", "rand", "with-cloned", "z85"]
 all-unstable = ["all", "aoc-unstable", "auth-unstable", "bitstream-unstable", "chainer-unstable", "cli-unstable", "defer-unstable", "id-unstable", "int-unstable", "iter-unstable", "lsl-unstable", "mcu-unstable", "memory-usage-unstable", "minesweeper-unstable", "num-traits-unstable", "path-unstable", "serialiser-binary-unstable", "serialiser-text-unstable", "string-pool-unstable", "sudoku-unstable", "unicode-unstable"]
 all-addons = ["hashbrown", "image", "large-tuples", "nightly", "omega-tuples-of-doom", "serde-json"]
 
@@ -141,6 +142,10 @@ num-traits-unstable = [
 	"int-unstable"
 ]
 path-unstable = []
+rand = [
+	"dep:rand",
+	"dep:rand_chacha"
+]
 serialiser-binary-unstable = [
 	"dep:ordered-float"
 ]
