--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,7 @@ p384 = { version = "0.13.0", optional = true }
 parking_lot = { version = "0.12.1", optional = true }
 rand = { version = "0.8.5", optional = true }
 rand_chacha = { version = "0.3.1", optional = true }
+serde = { version = "1.0.204", optional = true }
 serde_json = { version = "1.0.116", optional = true }
 spin_sleep = { version = "1.2.0", optional = true }
 thiserror = { version = "1.0.58", optional = true }
@@ -70,7 +71,7 @@ zeroize = { version = "1.7.0", optional = true }
 [features]
 all = ["augment-panic-hook", "clock-timer", "debounce", "export-all-submodules", "h", "hex", "lazy-wrap", "nominal", "rand", "with-cloned", "z85"]
 all-unstable = ["all", "aoc-unstable", "auth-unstable", "bitstream-unstable", "chainer-unstable", "cli-unstable", "defer-unstable", "id-unstable", "int-unstable", "iter-unstable", "lsl-unstable", "mcu-unstable", "memory-usage-unstable", "minesweeper-unstable", "num-traits-unstable", "path-unstable", "serialiser-binary-unstable", "serialiser-text-unstable", "string-pool-unstable", "sudoku-unstable", "unicode-unstable"]
-all-addons = ["hashbrown", "image", "large-tuples", "nightly", "omega-tuples-of-doom", "serde-json"]
+all-addons = ["hashbrown", "image", "large-tuples", "nightly", "omega-tuples-of-doom", "serde", "serde-json"]
 
 aoc-unstable = [
 	"iter-unstable"
@@ -180,6 +181,9 @@ large-tuples = []
 nightly = []
 omega-tuples-of-doom = [
 	"large-tuples"
+]
+serde = [
+	"dep:serde"
 ]
 serde-json = [
 	"dep:serde_json"
