refactor ID to use rand feature and faster chacha8 generator
the random part wasn't really meant to be relied on for security properties so faster is better here

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -114,8 +114,8 @@ hex = [
 	"num-traits-unstable"
 ]
 id-unstable = [
-	"dep:rand",
-	"num-traits-unstable"
+	"num-traits-unstable",
+	"rand"
 ]
 int-unstable = [
 	"wiwiwiwiwi/int",
