at some point I forgot to commit this, I think lol

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -156,6 +156,7 @@ rand = [
 ]
 serialiser-binary-unstable = [
 	"dep:ordered-float",
+	"defer-unstable",
 	"num-traits-unstable"
 ]
 serialiser-text-unstable = []
