--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,7 +70,7 @@ zeroize = { version = "1.7.0", optional = true }
 
 [features]
 all = ["augment-panic-hook", "clock-timer", "debounce", "export-all-submodules", "h", "hex", "lazy-wrap", "nominal", "rand", "with-cloned", "z85"]
-all-unstable = ["all", "aoc-unstable", "auth-unstable", "bitstream-unstable", "chainer-unstable", "cli-unstable", "defer-unstable", "gpg-unstable", "id-unstable", "int-unstable", "iter-unstable", "libassuan-unstable", "libgpg-error-unstable", "lsl-unstable", "mcu-unstable", "memory-usage-unstable", "minesweeper-unstable", "num-traits-unstable", "path-unstable", "serialiser-binary-unstable", "serialiser-binary-2-unstable", "serialiser-text-unstable", "string-pool-unstable", "sudoku-unstable", "unicode-unstable"]
+all-unstable = ["all", "aoc-unstable", "auth-unstable", "bitstream-unstable", "chainer-unstable", "cli-unstable", "defer-unstable", "id-unstable", "int-unstable", "iter-unstable", "lsl-unstable", "mcu-unstable", "memory-usage-unstable", "minesweeper-unstable", "num-traits-unstable", "path-unstable", "serialiser-binary-unstable", "serialiser-binary-2-unstable", "serialiser-text-unstable", "string-pool-unstable", "sudoku-unstable", "unicode-unstable"]
 all-addons = ["hashbrown", "image", "large-tuples", "nightly", "omega-tuples-of-doom", "serde", "serde-json"]
 
 aoc-unstable = [
@@ -104,10 +104,6 @@ debounce = [
 ]
 defer-unstable = []
 export-all-submodules = []
-gpg-unstable = [
-	"libassuan-unstable",
-	"libgpg-error-unstable"
-]
 h = []
 hex = [
 	"dep:thiserror",
@@ -126,8 +122,6 @@ iter-unstable = []
 lazy-wrap = [
 	"dep:parking_lot"
 ]
-libassuan-unstable = []
-libgpg-error-unstable = []
 lsl-unstable = [
 	"dep:hashbrown",
 	"id-unstable"
