docs, and cleanups / smol tweaks / more generally fix lint warnings
and, fix some spellings "safetly" -> "safely", apparently

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,7 +100,8 @@ clock-timer = [
 debounce = [
 	"dep:chrono",
 	"dep:tokio",
-	"num-traits-unstable"
+	"num-traits-unstable",
+	"with-cloned"
 ]
 defer-unstable = []
 export-all-submodules = []
