bin serialiser 2 WIP stuff
I think I got the traits to a place I'm content with for now, tried implementing it for bool and everything checks out, no way to test it though since I have nothing implementing `Output` just yet lol and I'm sleepy so I put that off

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -158,6 +158,7 @@ serialiser-binary-unstable = [
 ]
 serialiser-binary-2-unstable = [
 	"wiwiwiwiwi/serialiser-binary-2",
+	"dep:ordered-float",
 	"defer-unstable",
 	"num-traits-unstable"
 ]
