--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -16,13 +16,7 @@ quote = "1.0.36"
 syn = "2.0.66"
 
 [features]
-default = ["syn/full"]
-
-int = []
-memory-usage = []
-serialiser-binary = []
-serialiser-binary-2 = []
-unicode = []
+# default = ["syn/full"]
 
 [package.metadata.docs.rs]
 # https://docs.rs/about/metadata
