--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ wiwiwiwiwi = { path = "macro", version = "=0.10.0" }
 # zeroize = { version = "1.7.0", optional = true }
 
 [features]
+std = []
 
 [build-dependencies]
 # cc = "1.1.6"
