--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ wiwiwiwiwi = { path = "macro", version = "=0.10.0" }
 # argon2 = { version = "0.5.3", optional = true }
 # chacha20poly1305 = { version = "0.10.1", optional = true }
 # chrono = { version = "0.4.35", optional = true, features = ["clock"] }
-# hashbrown = { version = "0.14.3", optional = true, features = ["ahash"] }
+hashbrown = { version = "0.14.5", features = ["ahash"] }
 # httparse = { version = "1.8.0", optional = true }
 # image = { version = "0.25.1", optional = true }
 # ordered-float = { version = "4.2.0", optional = true }
