--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ thiserror = { version = "1.0.58" }
 # zeroize = { version = "1.7.0", optional = true }
 
 [features]
+nightly = []
 unstable = []
 
 [build-dependencies]
