--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ wiwiwiwiwi = { path = "macro", version = "=0.10.0" }
 # chacha20poly1305 = { version = "0.10.1", optional = true }
 # chrono = { version = "0.4.35", optional = true, features = ["clock"] }
 hashbrown = { version = "0.14.5", features = ["ahash"] }
+home = "0.5.9"
 # httparse = { version = "1.8.0", optional = true }
 # image = { version = "0.25.1", optional = true }
 # ordered-float = { version = "4.2.0", optional = true }
