--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ home = "0.5.9"
 # image = { version = "0.25.1", optional = true }
 # ordered-float = { version = "4.2.0", optional = true }
 # p384 = { version = "0.13.0", optional = true }
-# parking_lot = { version = "0.12.1", optional = true }
+parking_lot = "0.12.3"
 # rand = { version = "0.8.5", optional = true }
 # rand_chacha = { version = "0.3.1", optional = true }
 # serde = { version = "1.0.204", optional = true }
