--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,7 +60,7 @@ parking_lot = "0.12.3"
 # serde = { version = "1.0.204", optional = true }
 # serde_json = { version = "1.0.116", optional = true }
 # spin_sleep = { version = "1.2.0", optional = true }
-# thiserror = { version = "1.0.58" }
+thiserror = { version = "1.0.69" }
 # tokio = { version = "1.36.0", optional = true, features = ["full"] }
 # url = { version = "2.5.0", optional = true }
 # uuid = { version = "1.8.0", optional = true }
