--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,7 @@ wiwiwiwiwi = { path = "macro", version = "=0.10.0" }
 
 # argon2 = { version = "0.5.3", optional = true }
 # chacha20poly1305 = { version = "0.10.1", optional = true }
-# chrono = { version = "0.4.35", optional = true, features = ["clock"] }
+chrono = { version = "0.4.38", features = ["clock"] }
 hashbrown = { version = "0.15.0", features = ["default-hasher"] }
 home = "0.5.9"
 # httparse = { version = "1.8.0", optional = true }
@@ -61,7 +61,7 @@ parking_lot = "0.12.3"
 # serde_json = { version = "1.0.116", optional = true }
 # spin_sleep = { version = "1.2.0", optional = true }
 thiserror = { version = "1.0.69" }
-# tokio = { version = "1.36.0", optional = true, features = ["full"] }
+tokio = { version = "1.41.1", features = ["full"] }
 # url = { version = "2.5.0", optional = true }
 # uuid = { version = "1.8.0", optional = true }
 # zeroize = { version = "1.7.0", optional = true }
