--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,7 +68,7 @@ tokio = { version = "1.41.1", features = ["full"] }
 
 [features]
 nightly = []
-unstable = []
+# unstable = []
 
 [build-dependencies]
 # cc = "1.1.6"
