--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -16,7 +16,8 @@ quote = "1.0.36"
 syn = "2.0.66"
 
 [features]
-# default = ["syn/full"]
+# TODO: this should be adjusted
+default = ["syn/full"]
 
 [package.metadata.docs.rs]
 # https://docs.rs/about/metadata
