--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -11,13 +11,14 @@ license = { workspace = true }
 proc-macro = true
 
 [dependencies]
+darling = "0.20.10"
 proc-macro2 = "1.0.83"
 quote = "1.0.36"
 syn = "2.0.66"
 
 [features]
 # TODO: this should be adjusted
-default = ["syn/full"]
+default = ["syn/full", "syn/visit"]
 
 [package.metadata.docs.rs]
 # https://docs.rs/about/metadata
