--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = [
-	"macro",
+	"proc-macro",
 	"scripts"
 ]
 
@@ -43,7 +43,7 @@ keywords = [
 ]
 
 [dependencies]
-wiwiwiwiwi = { path = "macro", version = "=0.10.0" }
+wiwiwiwiwi = { path = "proc-macro", version = "=0.10.0" }
 
 # argon2 = { version = "0.5.3", optional = true }
 # chacha20poly1305 = { version = "0.10.1", optional = true }
