--- a/proc-macro/Cargo.toml
+++ b/proc-macro/Cargo.toml
@@ -20,6 +20,9 @@ syn = "2.0.66"
 # TODO: this should be adjusted
 default = ["syn/full", "syn/visit"]
 
+[lints]
+workspace = true
+
 [package.metadata.docs.rs]
 # https://docs.rs/about/metadata
 
