--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,8 +52,14 @@ jobs:
     - name: setup rust
       run: rustc --version
 
-    - name: publish macro crate
-      working-directory: macro
+    - name: publish proc macro crate
+      working-directory: proc-macro
+      run: cargo publish --verbose
+      env:
+        CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+
+    - name: publish decl macro crate
+      working-directory: decl-macro
       run: cargo publish --verbose
       env:
         CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
