--- a/proc-macro/Cargo.toml
+++ b/proc-macro/Cargo.toml
@@ -11,10 +11,10 @@ license = { workspace = true }
 proc-macro = true
 
 [dependencies]
-darling = "0.20.10"
-proc-macro2 = "1.0.83"
-quote = "1.0.36"
-syn = "2.0.66"
+darling = { workspace = true }
+proc-macro2 = { workspace = true }
+quote = { workspace = true }
+syn = { workspace = true }
 
 [features]
 # TODO: this should be adjusted
