--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,10 +49,10 @@ nightly = []
 # dotenvy = "0.15.7"
 
 [dev-dependencies]
-criterion = { version = "0.5.1", features = ["html_reports"] }
-hex = "0.4.3"
-rand = "0.8.5"
-z85 = "3.0.5"
+criterion = { workspace = true }
+hex = { workspace = true }
+rand = { workspace = true }
+z85 = { workspace = true }
 
 # [[bench]]
 # name = "hex-and-z85"
@@ -108,8 +108,10 @@ wiwiwiwiwiwiwiwiwiwi = { path = "decl-macro", version = "=0.10.0" }
 # argon2 = "0.5.3"
 # chacha20poly1305 = "0.10.1"
 chrono = { version = "0.4.38", features = ["clock"] }
+criterion = { version = "0.5.1", features = ["html_reports"] }
 darling = "0.20.10"
 hashbrown = { version = "0.15.0", features = ["default-hasher"] }
+hex = "0.4.3"
 home = "0.5.9"
 # httparse = "1.8.0"
 # image = "0.25.1"
@@ -118,7 +120,7 @@ home = "0.5.9"
 parking_lot = "0.12.3"
 proc-macro2 = "1.0.83"
 quote = "1.0.36"
-# rand = "0.8.5"
+rand = "0.8.5"
 # rand_chacha = "0.3.1"
 # serde = "1.0.204"
 # serde_json = "1.0.116"
@@ -128,6 +130,7 @@ thiserror = { version = "1.0.69" }
 tokio = { version = "1.41.1", features = ["full"] }
 # url = "2.5.0"
 # uuid = "1.8.0"
+z85 = "3.0.5"
 # zeroize = "1.7.0"
 
 [workspace.lints.rust]
