--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ keywords = [
 wiwiwiwiwi = { workspace = true }
 wiwiwiwiwiwiwiwiwiwi = { workspace = true }
 
+cfg-if = "1.0.0"
 chrono = { workspace = true }
 hashbrown = { workspace = true }
 home = { workspace = true }
